// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<MenuItem /> > ActionType story renders snapshot 1`] = `
<div
  class="css-dyfsrh-DemoWrapper e1d4dpqk0"
>
  <li
    class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters eanvvd48 css-5gpooo-MuiButtonBase-root-MuiMenuItem-root-StyledMenuItem"
    data-testid="MenuItem"
    name="Text here"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="css-x8io9u-ContentWrapper eanvvd47"
    >
      <span
        class="primary-text css-t02v0g-TextWrapper eanvvd46"
      >
        Text here
      </span>
      <span
        class="css-1sh6xjd-ColumnWrapper eanvvd44"
      >
        123,456
      </span>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </li>
</div>
`;

exports[`<MenuItem /> > Default story renders snapshot 1`] = `
<div
  class="css-dyfsrh-DemoWrapper e1d4dpqk0"
>
  <li
    class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters eanvvd48 css-5gpooo-MuiButtonBase-root-MuiMenuItem-root-StyledMenuItem"
    data-testid="MenuItem"
    name="Text here"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="css-s7c4e0-StyledIconWrapper eanvvd43"
    >
      <svg
        class="css-14b7qq1-DotIcon eanvvd41"
        fill="currentColor"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="6"
          cy="6"
          r="2"
        />
      </svg>
    </span>
    <span
      class="css-x8io9u-ContentWrapper eanvvd47"
    >
      <span
        class="primary-text css-t02v0g-TextWrapper eanvvd46"
      >
        Text here
      </span>
      <span
        class="css-1sh6xjd-ColumnWrapper eanvvd44"
      >
        123,456
      </span>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </li>
</div>
`;
